@@ -14,6 +14,8 @@ Revision history for Perl extension FSA::Rules.
       - Each rule may now take an optional has reference instead of a sub
         reference.  This makes message tracking for rules easier.  It's
         also used by graphs to generate edge labels.
+      - Added a label_wrap() method to control how labels wrap on the state
+        machine diagram.
 
 0.10  2004-12-17T23:29:54
       - Moved state-specific methods to new FSA::State class. This is a
